src/test/ui/issues/issue-58022.stderr
error[E0423]: expected function, tuple struct or tuple variant, found trait `Foo`
  --> $DIR/issue-58022.rs:14:9
   |
LL |         Foo(Box::new(*slice))
   |         ^^^ not a function, tuple struct or tuple variant

error[E0283]: type annotations needed
  --> $DIR/issue-58022.rs:4:25
   |
LL |     fn new(slice: &[u8; Foo::SIZE]) -> Self;
   |                         ^^^^^^^^^
   |                         |
   |                         cannot infer type
   |                         help: use the fully qualified path to an implementation: `<Type as Foo>::SIZE`
   |
   = note: cannot satisfy `_: Foo`
   = note: associated constants cannot be accessed directly on a `trait`, they can only be accessed through a specific `impl`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0283, E0423.
For more information about an error, try `rustc --explain E0283`.
